--- a/index.html
+++ b/index.html
@@ -1,37 +1,187 @@
-<!doctype html><html lang="es"><head><meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="theme-color" content="#0b0b0b" />
-<link rel="icon" type="image/jpeg" href="assets/logo.jpg" />
-<link rel="stylesheet" href="../styles.css" />
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-<script defer src="scripts/main.js"></script>
-<title>Inicio — Raíz Cervecera</title></head><body><header class="site-header" role="banner">
-  <a class="brand" href="../index.html" aria-label="Inicio">
-    <img src="assets/logo.jpg" alt="Logo Raíz Cervecera" />
-    <span>Raíz Cervecera</span>
-  </a>
-  <button class="nav-toggle" aria-controls="site-nav" aria-expanded="false" aria-label="Abrir menú">☰</button>
-  <nav id="site-nav" class="site-nav" aria-label="Navegación principal">
-    <ul>
-      <li><a href="../index.html">Inicio</a></li>
-      <li><a href="../cervezas.html">Cervezas</a></li>
-      <li><a href="../origen.html">Origen</a></li>
-      <li><a href="../contacto.html">Contacto</a></li>
-      <li><a href="../admin/index.html">Admin</a></li>
-    </ul>
-  </nav>
-</header>
-<main><section class="hero"><h1>Desde la raíz, cerveza de verdad</h1><p>Pequeños lotes, gran carácter.</p></section></main><footer class="site-footer" aria-label="Pie de página">
-  <div class="footer-inner">
-    <p>© <span id="year"></span> Raíz Cervecera · Quilpué, Chile</p>
-    <div class="social">
-      <a class="social-link" href="https://www.instagram.com/raizcervecera" target="_blank" rel="noopener" aria-label="Instagram">
-        <span>@raizcervecera</span>
-      </a>
-      <a class="social-link" href="https://www.facebook.com/raizcervecera" target="_blank" rel="noopener" aria-label="Facebook">
-        <span>Raíz Cervecera</span>
-      </a>
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Inicio — Raíz Cervecera</title>
+  <meta name="description" content="Desde la raíz, cerveza de verdad. Pequeños lotes, gran carácter." />
+  <link rel="icon" href="assets/img/logo.png" type="image/png" />
+  <style>
+    :root {
+      --bg: #000000;   /* Fondo negro */
+      --text: #f5f5f5; /* Texto claro */
+      --muted: #c8c8c8;
+      --border: #222222;
+      --accent: #14b8a6; /* teal para acentos en oscuro */
+    }
+
+    * { box-sizing: border-box; }
+    html, body { margin: 0; padding: 0; }
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
+      color: var(--text);
+      background: var(--bg);
+      line-height: 1.5;
+    }
+
+    /* Header en oscuro */
+    .site-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 1rem;
+      padding: 0.75rem 1rem;
+      border-bottom: 1px solid var(--border);
+      background: rgba(0,0,0,0.6); /* semitransparente para sticky */
+      backdrop-filter: blur(4px);
+      position: sticky;
+      top: 0;
+      z-index: 50;
+    }
+
+    .brand {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.6rem;
+      text-decoration: none;
+      color: inherit;
+    }
+    .brand__logo {
+      width: 48px;
+      height: auto;
+      display: block;
+    }
+    .brand__name {
+      font-weight: 700;
+      font-size: 1.1rem;
+      letter-spacing: 0.2px;
+    }
+
+    /* Nav */
+    .site-nav { display: flex; align-items: center; gap: 0.75rem; }
+    .nav__toggle { display: none; color: var(--text); }
+    .nav__list {
+      display: flex;
+      gap: 1rem;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    .site-nav a {
+      text-decoration: none;
+      color: var(--text);
+      padding: 0.3rem 0.2rem;
+    }
+    .site-nav a:hover { color: #ffffff; }
+
+    /* Sección con logo centrado */
+    .center-logo {
+      min-height: 60vh;
+      display: grid;
+      place-items: center;
+      padding: 2.5rem 1rem;
+    }
+    .center-logo img {
+      width: clamp(160px, 30vw, 360px);
+      height: auto;
+      filter: drop-shadow(0 6px 18px rgba(0,0,0,.6));
+    }
+    .center-logo .caption {
+      margin-top: 0.75rem;
+      color: var(--muted);
+      font-size: 0.95rem;
+      text-align: center;
+    }
+
+    /* Hero */
+    .hero {
+      max-width: 1024px;
+      margin: 0 auto;
+      padding: 1rem;
+      text-align: center;
+    }
+    .hero h1 { font-size: 2rem; margin: 0 0 0.5rem; }
+    .hero p { color: var(--muted); margin: 0.25rem 0 1rem; }
+
+    /* Footer */
+    footer {
+      border-top: 1px solid var(--border);
+      margin-top: 2rem;
+      padding: 1rem;
+      text-align: center;
+      color: var(--muted);
+      font-size: 0.95rem;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .site-header { flex-wrap: wrap; }
+      .nav__toggle {
+        display: inline-block;
+        background: none;
+        border: 1px solid var(--border);
+        padding: 0.4rem 0.6rem;
+        border-radius: 6px;
+        cursor: pointer;
+      }
+      .nav__list {
+        width: 100%;
+        margin-top: 0.5rem;
+        flex-direction: column;
+      }
+    }
+  </style>
+  <script>
+    // Toggle simple para menú móvil
+    document.addEventListener('DOMContentLoaded', () => {
+      const toggle = document.querySelector('.nav__toggle');
+      const list = document.getElementById('primary-nav');
+      if (toggle && list) {
+        toggle.addEventListener('click', () => {
+          const expanded = toggle.getAttribute('aria-expanded') === 'true';
+          toggle.setAttribute('aria-expanded', String(!expanded));
+          list.style.display = expanded ? '' : 'block';
+        });
+      }
+    });
+  </script>
+</head>
+<body>
+  <!-- Header con logo y navegación -->
+  <header class="site-header">
+    <a class="brand" href="index.html" aria-label="Ir al inicio">
+      <img src="assets/img/logo.png" alt="Logo Raíz Cervecera" class="brand__logo" />
+      <span class="brand__name">Raíz Cervecera</span>
+    </a>
+
+    <nav class="site-nav" aria-label="Navegación principal">
+      <button class="nav__toggle" aria-expanded="false" aria-controls="primary-nav">☰</button>
+      <ul id="primary-nav" class="nav__list">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="cervezas.html">Cervezas</a></li>
+        <li><a href="origen.html">Origen</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="admin/index.html">Admin</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Logo centrado en la página -->
+  <section class="center-logo" aria-label="Logo principal de Raíz Cervecera">
+    <div>
+      <img src="assets/img/logo.png" alt="Logo principal Raíz Cervecera" />
+      <div class="caption">Desde la raíz, cerveza de verdad</div>
     </div>
-  </div>
-</footer>
-</body></html>
+  </section>
+
+  <!-- Hero / contenido principal -->
+  <main class="hero">
+    <h1>Pequeños lotes, gran carácter</h1>
+    <p>Ingredientes locales y procesos cuidados.</p>
+  </main>
+
+  <footer>
+    © Raíz Cervecera · Quilpué, Chile
+  </footer>
+</body>
+</html>
