--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
       margin:0;
       font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,"Helvetica Neue",Arial,"Noto Sans",sans-serif;
       color:var(--text);
-      background: #111 url('assets/img/Fondo_raiz.jpg') center/cover no-repeat fixed; /* fondo */
+      background:#111 url('assets/img/Fondo_raiz.jpg') center/cover no-repeat fixed;
     }
-    /* Añadimos un velo para mejorar legibilidad sobre el fondo */
-    .page { background: rgba(255,255,255,0.80); min-height:100dvh; }
+    .page { background: rgba(255,255,255,0.80); min-height:100dvh; display:flex; flex-direction:column; }
 
     header { display:grid; grid-template-columns: 1fr; gap:12px; padding:12px 20px; border-bottom:1px solid #eee; backdrop-filter: blur(2px); }
     .logo-wrap { display:flex; align-items:center; gap:12px; }
@@ -28,13 +27,14 @@
     .menu li.login { margin-left:auto; }
     @media (max-width:560px){ .menu{ justify-content:center; } .menu li.login{ flex-basis:100%; text-align:right; } }
 
+    /* Hero restaurado */
     .hero { text-align:center; padding:48px 20px; }
     .brand-mark { display:block; margin:0 auto 16px; max-width:240px; width:50%; height:auto; }
     .hero h1 { font-size:clamp(1.6rem,2.2vw,2.2rem); margin:0 0 6px; }
     .hero h2 { font-size:clamp(1.1rem,1.8vw,1.5rem); font-weight:600; margin:10px 0 18px; color:#444; }
     .hero p { max-width:780px; margin:0 auto; color:#555; }
 
-    footer { text-align:center; padding:20px; color:#666; border-top:1px solid #eee; backdrop-filter: blur(2px); }
+    /* Sin footer */
   </style>
 </head>
 <body>
@@ -58,7 +58,6 @@
 
     <main>
       <section class="hero">
-        <!-- Imagen central achicada -->
         <img src="assets/img/Fondo_raiz.jpg" alt="Marca Raíz Cervecera" class="brand-mark" />
         <h1>Desde la raíz, cerveza de verdad</h1>
         <h2>Pequeños lotes, gran carácter</h2>
@@ -66,9 +65,7 @@
       </section>
     </main>
 
-    <footer>
-      © Raíz Cervecera · Quilpué, Chile
-    </footer>
+    <!-- Sin footer -->
   </div>
 </body>
 </html>
