--- a/index.html
+++ b/index.html
@@ -58,22 +58,24 @@
 </head>
 <body>
   <div class="page">
-    <header>
-      <div class="logo-wrap">
-        index.html
-          assets/img/logo.png
-        </a>
-      </div>
-      <nav aria-label="Menú principal">
-        <ul class="menu">
-          <li>index.htmlInicio</a></li>
-          <li>cervezas.htmlCervezas</a></li>
-          <li>origen.htmlOrigen</a></li>
-          <li>contacto.htmlContacto</a></li>
-          <li class="login">login.htmlLogin</a></li>
-        </ul>
-      </nav>
-    </header>
+   
+<header>
+  <div class="logo-wrap">
+    <a href="index.html" aria-label="Inicio">
+      <img src="assets/img/logo.png" alt="Logo Raíz Cervecera" class="logo" />
+    </a>
+  </div>
+  <nav aria-label="Menú principal">
+    <ul class="menu">
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="quienes-somos.html">Quienes somos</a></li>
+      <li><a href="cervezas.html">Nuestra Cervezas</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
+      <li class="login"><a href="login.html">Login</a></li>
+    </ul>
+  </nav>
+</header>
+
 
     <main>
       <!-- Sin hero, sin footer -->
