--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <title>Nuestra Cervezas — Raíz Cervecera</title>
+  <title>Quienes somos — Raíz Cervecera</title>
 
   <meta charset=\"utf-8\" />
   <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\" />
@@ -59,20 +59,10 @@
 
     <main>
       <div class="content">
-        <h1>Nuestra Cervezas</h1>
-        <div class="grid">
-          <div class="card">
-            <h2>IPA</h2>
-            <p>Aromas cítricos y resinosos, amargor balanceado. Alc: 6.2%.</p>
-          </div>
-          <div class="card">
-            <h2>Stout</h2>
-            <p>Notas a café y chocolate, cuerpo medio. Alc: 5.6%.</p>
-          </div>
-          <div class="card">
-            <h2>Blonde Ale</h2>
-            <p>Fresca y ligera, ideal para iniciar. Alc: 4.8%.</p>
-          </div>
+        <h1>Quienes somos</h1>
+        <div class="card">
+          <p>Somos una cervecería independiente con raíces en Quilpué. Elaboramos pequeños lotes con ingredientes locales y procesos cuidados para lograr cervezas honestas y con carácter.</p>
+          <p>Nuestra filosofía: calidad sobre cantidad, transparencia en procesos y cercanía con la comunidad.</p>
         </div>
       </div>
     </main>
