--- a/index.html
+++ b/index.html
@@ -17,68 +17,46 @@
     .page {
       background: rgba(255,255,255,0.80);
       min-height:100dvh;
-      display:flex;
-      flex-direction:column;
+      display:flex; flex-direction:column;
     }
     header {
-      display:grid;
-      grid-template-columns: 1fr;
-      gap:12px;
-      padding:12px 20px;
-      border-bottom:1px solid #eee;
-      backdrop-filter: blur(2px);
+      display:grid; grid-template-columns: 1fr; gap:12px; padding:12px 20px;
+      border-bottom:1px solid #eee; backdrop-filter: blur(2px);
     }
     .logo-wrap { display:flex; align-items:center; gap:12px; }
     .logo { height:40px; width:auto; mix-blend-mode:multiply; image-rendering:-webkit-optimize-contrast; }
     nav { width:100%; }
     .menu {
-      list-style:none;
-      margin:0;
-      padding:0;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      gap:16px;
-      flex-wrap:wrap;
+      list-style:none; margin:0; padding:0; display:flex; justify-content:center; align-items:center; gap:16px; flex-wrap:wrap;
     }
-    .menu a {
-      text-decoration:none;
-      color:var(--text);
-      padding:8px 10px;
-      border-radius:6px;
-    }
+    .menu a { text-decoration:none; color:var(--text); padding:8px 10px; border-radius:6px; }
     .menu a:hover { background:#f3f3f3; }
     .menu li.login { margin-left:auto; }
-    @media (max-width:560px){
-      .menu{ justify-content:center; }
-      .menu li.login{ flex-basis:100%; text-align:right; }
-    }
+    @media (max-width:560px){ .menu{ justify-content:center; } .menu li.login{ flex-basis:100%; text-align:right; } }
     main { flex:1; }
   </style>
 </head>
 <body>
   <div class="page">
-   
-<header>
-  <div class="logo-wrap">
-    <a href="index.html" aria-label="Inicio">
-      <img src="assets/img/logo.png" alt="Logo Raíz Cervecera" class="logo" />
-    </a>
-  </div>
-  <nav aria-label="Menú principal">
-    <ul class="menu">
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="quienes-somos.html">Quienes somos</a></li>
-      <li><a href="cervezas.html">Nuestra Cervezas</a></li>
-      <li><a href="contacto.html">Contacto</a></li>
-      <li class="login"><a href="login.html">Login</a></li>
-    </ul>
-  </nav>
-</header>
-
+    <header>
+      <div class="logo-wrap">
+        <a href="index.html" aria-label="Inicio">
+          <img src="assets/img/logo.png" alt="Logo Raíz Cervecera" class="logo" />
+        </a>
+      </div>
+      <nav aria-label="Menú principal">
+        <ul class="menu">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="quienes-somos.html">Quienes somos</a></li>
+          <li><a href="cervezas.html">Nuestra Cervezas</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li class="login"><a href="login.html">Login</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <main>
-      <!-- Sin hero, sin footer -->
+      <!-- Página sin hero y sin footer -->
     </main>
   </div>
 </body>
