--- a/index-dark.html
+++ b/index-dark.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset=\"UTF-8\" />
     <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\" />
-    <title>Login — Raíz Cervecera</title>
+    <title>Inicio — Raíz Cervecera</title>
     <meta name=\"description\" content=\"Raíz Cervecera — Cervezas artesanales desde Quilpué, Chile.\" />
     <link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">
     <link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin>
@@ -33,23 +33,26 @@
         <main>
             <section class=\"hero\">
                 <div class=\"container\">
-                    <h1>Login</h1>
-                    <p>Accede para gestionar pedidos y contenidos.</p>
+                    <h1>Bienvenido a Raíz Cervecera</h1>
+                    <p>Descubre nuestras cervezas artesanales elaboradas en Quilpué, Chile.</p>
                 </div>
             </section>
             <section class=\"section\">
                 <div class=\"container\">
-                    <form class=\"card form\" action=\"#\" method=\"post\">
-                        <label>
-                            Email
-                            <input type=\"email\" name=\"email\" placeholder=\"tucorreo@example.com\" required />
-                        </label>
-                        <label>
-                            Contraseña
-                            <input type=\"password\" name=\"password\" placeholder=\"********\" required />
-                        </label>
-                        <button type=\"submit\">Ingresar</button>
-                    </form>
+                    <div class=\"cards grid\">
+                        <article class=\"card\">
+                            <h3>Quienes somos</h3>
+                            <p>Conoce nuestra historia, filosofía y el equipo detrás de cada batch.</p>
+                        </article>
+                        <article class=\"card\">
+                            <h3>Nuestras Cervezas</h3>
+                            <p>Explora estilos, notas de cata y maridajes recomendados.</p>
+                        </article>
+                        <article class=\"card\">
+                            <h3>Contacto</h3>
+                            <p>¿Tienes dudas o quieres colaborar? Escríbenos y te respondemos.</p>
+                        </article>
+                    </div>
                 </div>
             </section>
         </main>
