--- a/cervezas.html
+++ b/cervezas.html
@@ -1,93 +1,70 @@
 
-<!doctype html>
-<html lang="es">
+<!DOCTYPE html>
+<html lang=\"es\">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Nuestra Cervezas — Raíz Cervecera</title>
-
-  <style>
-    :root { --bg:#ffffff; --text:#222; --accent:#1f6f50; }
-    html, body { height:100%; }
-    body { margin:0; font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,"Helvetica Neue",Arial,"Noto Sans",sans-serif; color:var(--text); background:#111 url('assets/img/Fondo_raiz.jpg') center/cover no-repeat fixed; }
-    .page { background: rgba(255,255,255,0.80); min-height:100dvh; display:flex; flex-direction:column; padding-bottom:72px; }
-    header { position: sticky; top: 0; z-index: 1000; display: grid; grid-template-columns: 1fr; gap: 12px; padding: 12px 20px; border-bottom: 1px solid rgba(255,255,255,0.35); background: rgba(255,255,255,0.50); backdrop-filter: blur(6px); transition: box-shadow .15s ease; }
-    header.stuck { box-shadow: 0 6px 16px rgba(0,0,0,0.06); }
-    .logo-wrap { display: flex; align-items: center; gap: 12px; }
-    .logo { height: 42px; width: auto; mix-blend-mode: multiply; image-rendering: -webkit-optimize-contrast; }
-    nav { width: 100%; }
-    .menu { list-style: none; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; gap: 12px; flex-wrap: wrap; }
-    .menu a { text-decoration: none; color: #1f6f50; background: rgba(31,111,80,0.10); border: 1px solid #ddd; padding: 8px 14px; border-radius: 999px; font-weight: 600; letter-spacing: 0.2px; transition: background .15s ease, border-color .15s ease, transform .15s ease, color .15s ease; }
-    .menu a:hover { background: rgba(31,111,80,0.18); border-color: #ccc; transform: translateY(-1px); color: #175640; }
-    .menu li.login { margin-left: auto; position: relative; }
-    .menu li.login::before { content: ""; position: absolute; left: -12px; top: 50%; transform: translateY(-50%); width: 1px; height: 18px; background: #ddd; }
-    .menu li.login a { color: #fff; background: #1f6f50; border-color: #1f6f50; box-shadow: 0 2px 6px rgba(31,111,80,0.25); }
-    .menu li.login a:hover { filter: brightness(1.05); transform: translateY(-1px); }
-    .menu a.active { background: rgba(31,111,80,0.20); border-color: #bbb; }
-    main { flex: 1; padding: 24px; }
-    .content { max-width: 860px; margin: 0 auto; }
-    @media (max-width: 560px) { .menu { justify-content: center; } .menu li.login { flex-basis: 100%; text-align: right; } .menu li.login::before { display: none; } }
-
-    /* Footer fijo */
-    footer { position: fixed; left:0; right:0; bottom:0; z-index:1000; text-align:center; padding:18px 20px; color:#666; border-top:1px solid #eee; background:rgba(255,255,255,0.88); backdrop-filter: blur(4px); }
-    .footer-bottom { display:inline-flex; gap:10px; align-items:center; justify-content:center; margin-top:8px; }
-    .social-link { color:#1f6f50; text-decoration:none; font-size:0.95rem; word-break: break-all; }
-    .social-link:hover { text-decoration: underline; }
-    .sep { color:#999; }
-  </style>
-
+    <meta charset=\"UTF-8\" />
+    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\" />
+    <title>Nuestras Cervezas — Raíz Cervecera</title>
+    <meta name=\"description\" content=\"Raíz Cervecera — Cervezas artesanales desde Quilpué, Chile.\" />
+    <link rel=\"preconnect\" href=\"https://fonts.googleapis.com\">
+    <link rel=\"preconnect\" href=\"https://fonts.gstatic.com\" crossorigin>
+    <link href=\"https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap\" rel=\"stylesheet\">
+    <link rel=\"stylesheet\" href=\"styles.css\">
 </head>
 <body>
-  <div class="page">
-
     <header>
-      <div class="logo-wrap">
-        <a href="index.html" aria-label="Inicio">
-          <img src="assets/img/logo.png" alt="Logo Raíz Cervecera" class="logo" />
-        </a>
-      </div>
-      <nav aria-label="Menú principal">
-        <ul class="menu">
-          <li><a href="index.html" class="">Inicio</a></li>
-          <li><a href="quienes-somos.html" class="">Quienes somos</a></li>
-          <li><a href="cervezas.html" class="active">Nuestra Cervezas</a></li>
-          <li><a href="contacto.html" class="">Contacto</a></li>
-          <li class="login"><a href="login.html">Login</a></li>
-        </ul>
-      </nav>
-    </header>
-    <script>document.addEventListener('scroll',function(){var h=document.querySelector('header'); if(h){ h.classList.toggle('stuck', window.scrollY>10); }});</script>
-
-    <main>
-      <div class="content">
-        <h1>Nuestra Cervezas</h1>
-        <div style="display:grid; gap:16px; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));">
-          <div style="background:#fff; border:1px solid #eee; border-radius:12px; padding:16px; box-shadow:0 4px 12px rgba(0,0,0,0.06);">
-            <h2>IPA</h2>
-            <p>Aromas cítricos y resinosos, amargor balanceado. Alc: 6.2%.</p>
-          </div>
-          <div style="background:#fff; border:1px solid #eee; border-radius:12px; padding:16px; box-shadow:0 4px 12px rgba(0,0,0,0.06);">
-            <h2>Stout</h2>
-            <p>Notas a café y chocolate, cuerpo medio. Alc: 5.6%.</p>
-          </div>
-          <div style="background:#fff; border:1px solid #eee; border-radius:12px; padding:16px; box-shadow:0 4px 12px rgba(0,0,0,0.06);">
-            <h2>Blonde Ale</h2>
-            <p>Fresca y ligera, ideal para iniciar. Alc: 4.8%.</p>
-          </div>
+        <div class=\"container nav\">
+            <a href=\"index.html\" class=\"brand\" aria-label=\"Inicio\">
+                <span class=\"logo-mark\" aria-hidden=\"true\"></span>
+                <span>Raíz Cervecera</span>
+            </a>
+            <nav aria-label=\"Principal\">
+                <ul>
+                    <li><a href=\"index.html\">Inicio</a></li>
+                    <li><a href=\"quienes-somos.html\">Quienes somos</a></li>
+                    <li><a href=\"cervezas.html\">Nuestra Cervezas</a></li>
+                    <li><a href=\"contacto.html\">Contacto</a></li>
+                </ul>
+            </nav>
+            <a class=\"btn-login\" href=\"login.html\">Login</a>
         </div>
-      </div>
+    </header>
 
-    </main>
-
-    <footer role="contentinfo" aria-label="Pie de página">
-      <div>© Raíz Cervecera · Quilpué, Chile</div>
-      <div class="footer-bottom" aria-label="Redes sociales">
-        <a class="social-link" href="https://instagram.com/raizcervecera" target="_blank" rel="noopener noreferrer">https://instagram.com/raizcervecera</a>
-        <span class="sep">·</span>
-        <a class="social-link" href="https://web.facebook.com/RaizCervecera" target="_blank" rel="noopener noreferrer">https://web.facebook.com/RaizCervecera</a>
-      </div>
+        <main>
+            <section class=\"hero\">
+                <div class=\"container\">
+                    <h1>Nuestras Cervezas</h1>
+                    <p>Estilos, notas de cata y maridajes recomendados.</p>
+                </div>
+            </section>
+            <section class=\"section\">
+                <div class=\"container\">
+                    <div class=\"grid\">
+                        <article class=\"card\">
+                            <h3>IPA</h3>
+                            <p>Aromas cítricos y tropicales, amargor medio-alto. Marida con comida picante.</p>
+                        </article>
+                        <article class=\"card\">
+                            <h3>Stout</h3>
+                            <p>Notas de café y chocolate, cuerpo medio. Ideal con postres y carnes ahumadas.</p>
+                        </article>
+                        <article class=\"card\">
+                            <h3>Lager</h3>
+                            <p>Refrescante y limpia, amargor suave. Perfecta para acompañar pizzas y ensaladas.</p>
+                        </article>
+                    </div>
+                </div>
+            </section>
+        </main>
+        
+    <footer>
+        <div class=\"container footer\">
+            <div>© Raíz Cervecera · Quilpué, Chile</div>
+            <div class=\"social\">
+                <a href=\"https://instagram.com/raizcervecera\" target=\"_blank\" rel=\"noopener\">Instagram</a>
+                <a href=\"https://web.facebook.com/RaizCervecera\" target=\"_blank\" rel=\"noopener\">Facebook</a>
+            </div>
+        </div>
     </footer>
-
-  </div>
 </body>
 </html>
